--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-changelog-helper",
-  "version": "1.1.2-0",
+  "version": "1.1.2",
   "description": "",
   "main": "index.js",
   "scripts": {
